name:                ngrok
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/iand675/ngrok#readme
license:             BSD3
license-file:        LICENSE
author:              Ian Duncan
maintainer:          ian@iankduncan.com
copyright:           Copyright: (c) 2015 Ian Duncan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ngrok
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , base64-bytestring
                     , blaze-builder
                     , bytestring
                     , http-client
                     , http-types
                     , lens
                     , text
                     , time
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

test-suite ngrok-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ngrok
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iand675/ngrok
